--- a/app/src/main/res/layout/view_item_driver_available.xml
+++ b/app/src/main/res/layout/view_item_driver_available.xml
@@ -54,6 +54,7 @@
                     android:layout_marginLeft="5dp">
 
                     <TextView
+                        android:id="@+id/driver_distance"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -63,6 +64,7 @@
                         android:text=":" />
 
                     <TextView
+                        android:id="@+id/driver_time"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
